docs/api/qiskit/0.19/qiskit.circuit.library.ZGate.mdx
---
title: ZGate (v0.19)
description: API reference for qiskit.circuit.library.ZGate in qiskit v0.19
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.circuit.library.ZGate
---

# ZGate

<Class id="qiskit.circuit.library.ZGate" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.14/qiskit/circuit/library/standard_gates/z.py" signature="ZGate(label=None)" modifiers="class">
  The single-qubit Pauli-Z gate ($\sigma_z$).

  **Matrix Representation:**

$$
\begin{split}Z = \begin{pmatrix}
1 & 0 \\
0 & -1
\end{pmatrix}\end{split}
$$

  **Circuit symbol:**

  ```python
       ┌───┐
  q_0: ┤ Z ├
       └───┘
  ```

  Equivalent to a $\pi$ radian rotation about the Z axis.

  <Admonition title="Note" type="note">
    A global phase difference exists between the definitions of $RZ(\pi)$ and $Z$.

$$
\begin{split}RZ(\pi) = \begin{pmatrix}
-1 & 0 \\
0 & 1
\end{pmatrix}
= -Z\end{split}
$$
  </Admonition>

  The gate is equivalent to a phase flip.

$$
\begin{split}|0\rangle \rightarrow |0\rangle \\
|1\rangle \rightarrow -|1\rangle\end{split}
$$

  Create new Z gate.

  ## Attributes

  <span id="zgate-decompositions" />

  ### decompositions

  <Attribute id="qiskit.circuit.library.ZGate.decompositions">
    Get the decompositions of the instruction from the SessionEquivalenceLibrary.
  </Attribute>

  <span id="zgate-definition" />

  ### definition

  <Attribute id="qiskit.circuit.library.ZGate.definition">
    Return definition in terms of other basic gates.
  </Attribute>

  <span id="zgate-label" />

  ### label

  <Attribute id="qiskit.circuit.library.ZGate.label" attributeTypeHint="str">
    Return gate label

    **Return type**

    `str`
  </Attribute>

  <span id="zgate-params" />

  ### params

  <Attribute id="qiskit.circuit.library.ZGate.params">
    return instruction params.
  </Attribute>

  ## Methods

  <span id="zgate-add-decomposition" />

  ### add\_decomposition

  <Function id="qiskit.circuit.library.ZGate.add_decomposition" signature="ZGate.add_decomposition(decomposition)">
    Add a decomposition of the instruction to the SessionEquivalenceLibrary.
  </Function>

  <span id="zgate-assemble" />

  ### assemble

  <Function id="qiskit.circuit.library.ZGate.assemble" signature="ZGate.assemble()">
    Assemble a QasmQobjInstruction

    **Return type**

    [`Instruction`](qiskit.circuit.Instruction "qiskit.circuit.instruction.Instruction")
  </Function>

  <span id="zgate-broadcast-arguments" />

  ### broadcast\_arguments

  <Function id="qiskit.circuit.library.ZGate.broadcast_arguments" signature="ZGate.broadcast_arguments(qargs, cargs)">
    Validation and handling of the arguments and its relationship.

    For example, `cx([q[0],q[1]], q[2])` means `cx(q[0], q[2]); cx(q[1], q[2])`. This method yields the arguments in the right grouping. In the given example:

    ```python
    in: [[q[0],q[1]], q[2]],[]
    outs: [q[0], q[2]], []
          [q[1], q[2]], []
    ```

    The general broadcasting rules are:

    > *   If len(qargs) == 1:
    >
    >     ```python
    >     [q[0], q[1]] -> [q[0]],[q[1]]
    >     ```
    >
    > *   If len(qargs) == 2:
    >
    >     ```python
    >     [[q[0], q[1]], [r[0], r[1]]] -> [q[0], r[0]], [q[1], r[1]]
    >     [[q[0]], [r[0], r[1]]]       -> [q[0], r[0]], [q[0], r[1]]
    >     [[q[0], q[1]], [r[0]]]       -> [q[0], r[0]], [q[1], r[0]]
    >     ```
    >
    > *   If len(qargs) >= 3:
    >
    >     ```python
    >     [q[0], q[1]], [r[0], r[1]],  ...] -> [q[0], r[0], ...], [q[1], r[1], ...]
    >     ```

    **Parameters**

    *   **qargs** (`List`) – List of quantum bit arguments.
    *   **cargs** (`List`) – List of classical bit arguments.

    **Return type**

    `Tuple`\[`List`, `List`]

    **Returns**

    A tuple with single arguments.

    **Raises**

    **CircuitError** – If the input is not valid. For example, the number of arguments does not match the gate expectation.
  </Function>

  <span id="zgate-c-if" />

  ### c\_if

  <Function id="qiskit.circuit.library.ZGate.c_if" signature="ZGate.c_if(classical, val)">
    Add classical condition on register classical and value val.
  </Function>

  <span id="zgate-control" />

  ### control

  <Function id="qiskit.circuit.library.ZGate.control" signature="ZGate.control(num_ctrl_qubits=1, label=None, ctrl_state=None)">
    Return a (mutli-)controlled-Z gate.

    One control returns a CZ gate.

    **Parameters**

    *   **num\_ctrl\_qubits** (*int*) – number of control qubits.
    *   **label** (*str or None*) – An optional label for the gate \[Default: None]
    *   **ctrl\_state** (*int or str or None*) – control state expressed as integer, string (e.g. ‘110’), or None. If None, use all 1s.

    **Returns**

    controlled version of this gate.

    **Return type**

    [ControlledGate](qiskit.circuit.ControlledGate "qiskit.circuit.ControlledGate")
  </Function>

  <span id="zgate-copy" />

  ### copy

  <Function id="qiskit.circuit.library.ZGate.copy" signature="ZGate.copy(name=None)">
    Copy of the instruction.

    **Parameters**

    **name** (*str*) – name to be given to the copied circuit, if None then the name stays the same.

    **Returns**

    **a copy of the current instruction, with the name**

    updated if it was provided

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")
  </Function>

  <span id="zgate-inverse" />

  ### inverse

  <Function id="qiskit.circuit.library.ZGate.inverse" signature="ZGate.inverse()">
    Return inverted Z gate (itself).
  </Function>

  <span id="zgate-is-parameterized" />

  ### is\_parameterized

  <Function id="qiskit.circuit.library.ZGate.is_parameterized" signature="ZGate.is_parameterized()">
    Return True .IFF. instruction is parameterized else False
  </Function>

  <span id="zgate-mirror" />

  ### mirror

  <Function id="qiskit.circuit.library.ZGate.mirror" signature="ZGate.mirror()">
    For a composite instruction, reverse the order of sub-gates.

    This is done by recursively mirroring all sub-instructions. It does not invert any gate.

    **Returns**

    a fresh gate with sub-gates reversed

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")
  </Function>

  <span id="zgate-power" />

  ### power

  <Function id="qiskit.circuit.library.ZGate.power" signature="ZGate.power(exponent)">
    Creates a unitary gate as gate^exponent.

    **Parameters**

    **exponent** (*float*) – Gate^exponent

    **Returns**

    To which to\_matrix is self.to\_matrix^exponent.

    **Return type**

    [qiskit.extensions.UnitaryGate](qiskit.extensions.UnitaryGate "qiskit.extensions.UnitaryGate")

    **Raises**

    **CircuitError** – If Gate is not unitary
  </Function>

  <span id="zgate-qasm" />

  ### qasm

  <Function id="qiskit.circuit.library.ZGate.qasm" signature="ZGate.qasm()">
    Return a default OpenQASM string for the instruction.

    Derived instructions may override this to print in a different format (e.g. measure q\[0] -> c\[0];).
  </Function>

  <span id="zgate-repeat" />

  ### repeat

  <Function id="qiskit.circuit.library.ZGate.repeat" signature="ZGate.repeat(n)">
    Creates an instruction with gate repeated n amount of times.

    **Parameters**

    **n** (*int*) – Number of times to repeat the instruction

    **Returns**

    Containing the definition.

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")

    **Raises**

    **CircuitError** – If n \< 1.
  </Function>

  <span id="zgate-to-matrix" />

  ### to\_matrix

  <Function id="qiskit.circuit.library.ZGate.to_matrix" signature="ZGate.to_matrix()">
    Return a numpy.array for the Z gate.
  </Function>
</Class>

