docs/api/qiskit/0.24/qiskit.circuit.library.ZGate.mdx
---
title: ZGate
description: API reference for qiskit.circuit.library.ZGate
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.circuit.library.ZGate
---

<span id="qiskit-circuit-library-zgate" />

# qiskit.circuit.library.ZGate

<Class id="qiskit.circuit.library.ZGate" github="https://github.com/qiskit/qiskit/tree/stable/0.16/qiskit/circuit/library/standard_gates/z.py" signature="ZGate(label=None)">
  The single-qubit Pauli-Z gate ($\sigma_z$).

  **Matrix Representation:**

  $$
  \begin{split}Z = \begin{pmatrix}
          1 & 0 \\
          0 & -1
      \end{pmatrix}\end{split}
  $$

  **Circuit symbol:**

  ```python
       ┌───┐
  q_0: ┤ Z ├
       └───┘
  ```

  Equivalent to a $\pi$ radian rotation about the Z axis.

  <Admonition title="Note" type="note">
    A global phase difference exists between the definitions of $RZ(\pi)$ and $Z$.

    $$
    \begin{split}RZ(\pi) = \begin{pmatrix}
                -1 & 0 \\
                0 & 1
              \end{pmatrix}
            = -Z\end{split}
    $$
  </Admonition>

  The gate is equivalent to a phase flip.

  $$
  \begin{split}|0\rangle \rightarrow |0\rangle \\
  |1\rangle \rightarrow -|1\rangle\end{split}
  $$

  Create new Z gate.

  ### \_\_init\_\_

  <Function id="qiskit.circuit.library.ZGate.__init__" name="__init__" signature="__init__(label=None)">
    Create new Z gate.
  </Function>

  ## Methods

  |                                                                                                                                             |                                                                          |
  | ------------------------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------ |
  | [`__init__`](#qiskit.circuit.library.ZGate.__init__ "qiskit.circuit.library.ZGate.__init__")(\[label])                                      | Create new Z gate.                                                       |
  | [`add_decomposition`](#qiskit.circuit.library.ZGate.add_decomposition "qiskit.circuit.library.ZGate.add_decomposition")(decomposition)      | Add a decomposition of the instruction to the SessionEquivalenceLibrary. |
  | [`assemble`](#qiskit.circuit.library.ZGate.assemble "qiskit.circuit.library.ZGate.assemble")()                                              | Assemble a QasmQobjInstruction                                           |
  | [`broadcast_arguments`](#qiskit.circuit.library.ZGate.broadcast_arguments "qiskit.circuit.library.ZGate.broadcast_arguments")(qargs, cargs) | Validation and handling of the arguments and its relationship.           |
  | [`c_if`](#qiskit.circuit.library.ZGate.c_if "qiskit.circuit.library.ZGate.c_if")(classical, val)                                            | Add classical condition on register classical and value val.             |
  | [`control`](#qiskit.circuit.library.ZGate.control "qiskit.circuit.library.ZGate.control")(\[num\_ctrl\_qubits, label, ctrl\_state])         | Return a (mutli-)controlled-Z gate.                                      |
  | [`copy`](#qiskit.circuit.library.ZGate.copy "qiskit.circuit.library.ZGate.copy")(\[name])                                                   | Copy of the instruction.                                                 |
  | [`inverse`](#qiskit.circuit.library.ZGate.inverse "qiskit.circuit.library.ZGate.inverse")()                                                 | Return inverted Z gate (itself).                                         |
  | [`is_parameterized`](#qiskit.circuit.library.ZGate.is_parameterized "qiskit.circuit.library.ZGate.is_parameterized")()                      | Return True .IFF.                                                        |
  | [`mirror`](#qiskit.circuit.library.ZGate.mirror "qiskit.circuit.library.ZGate.mirror")()                                                    | DEPRECATED: use instruction.reverse\_ops().                              |
  | [`power`](#qiskit.circuit.library.ZGate.power "qiskit.circuit.library.ZGate.power")(exponent)                                               | Creates a unitary gate as gate^exponent.                                 |
  | [`qasm`](#qiskit.circuit.library.ZGate.qasm "qiskit.circuit.library.ZGate.qasm")()                                                          | Return a default OpenQASM string for the instruction.                    |
  | [`repeat`](#qiskit.circuit.library.ZGate.repeat "qiskit.circuit.library.ZGate.repeat")(n)                                                   | Creates an instruction with gate repeated n amount of times.             |
  | [`reverse_ops`](#qiskit.circuit.library.ZGate.reverse_ops "qiskit.circuit.library.ZGate.reverse_ops")()                                     | For a composite instruction, reverse the order of sub-instructions.      |
  | [`to_matrix`](#qiskit.circuit.library.ZGate.to_matrix "qiskit.circuit.library.ZGate.to_matrix")()                                           | Return a numpy.array for the Z gate.                                     |
  | [`validate_parameter`](#qiskit.circuit.library.ZGate.validate_parameter "qiskit.circuit.library.ZGate.validate_parameter")(parameter)       | Gate parameters should be int, float, or ParameterExpression             |

  ## Attributes

  |                                                                                                                |                                                                               |
  | -------------------------------------------------------------------------------------------------------------- | ----------------------------------------------------------------------------- |
  | [`decompositions`](#qiskit.circuit.library.ZGate.decompositions "qiskit.circuit.library.ZGate.decompositions") | Get the decompositions of the instruction from the SessionEquivalenceLibrary. |
  | [`definition`](#qiskit.circuit.library.ZGate.definition "qiskit.circuit.library.ZGate.definition")             | Return definition in terms of other basic gates.                              |
  | [`duration`](#qiskit.circuit.library.ZGate.duration "qiskit.circuit.library.ZGate.duration")                   | Get the duration.                                                             |
  | [`label`](#qiskit.circuit.library.ZGate.label "qiskit.circuit.library.ZGate.label")                            | Return gate label                                                             |
  | [`params`](#qiskit.circuit.library.ZGate.params "qiskit.circuit.library.ZGate.params")                         | return instruction params.                                                    |
  | [`unit`](#qiskit.circuit.library.ZGate.unit "qiskit.circuit.library.ZGate.unit")                               | Get the time unit of duration.                                                |

  ### add\_decomposition

  <Function id="qiskit.circuit.library.ZGate.add_decomposition" name="add_decomposition" signature="add_decomposition(decomposition)">
    Add a decomposition of the instruction to the SessionEquivalenceLibrary.
  </Function>

  ### assemble

  <Function id="qiskit.circuit.library.ZGate.assemble" name="assemble" signature="assemble()">
    Assemble a QasmQobjInstruction

    **Return type**

    `Instruction`
  </Function>

  ### broadcast\_arguments

  <Function id="qiskit.circuit.library.ZGate.broadcast_arguments" name="broadcast_arguments" signature="broadcast_arguments(qargs, cargs)">
    Validation and handling of the arguments and its relationship.

    For example, `cx([q[0],q[1]], q[2])` means `cx(q[0], q[2]); cx(q[1], q[2])`. This method yields the arguments in the right grouping. In the given example:

    ```python
    in: [[q[0],q[1]], q[2]],[]
    outs: [q[0], q[2]], []
          [q[1], q[2]], []
    ```

    The general broadcasting rules are:

    > *   If len(qargs) == 1:
    >
    >     ```python
    >     [q[0], q[1]] -> [q[0]],[q[1]]
    >     ```
    >
    > *   If len(qargs) == 2:
    >
    >     ```python
    >     [[q[0], q[1]], [r[0], r[1]]] -> [q[0], r[0]], [q[1], r[1]]
    >     [[q[0]], [r[0], r[1]]]       -> [q[0], r[0]], [q[0], r[1]]
    >     [[q[0], q[1]], [r[0]]]       -> [q[0], r[0]], [q[1], r[0]]
    >     ```
    >
    > *   If len(qargs) >= 3:
    >
    >     ```python
    >     [q[0], q[1]], [r[0], r[1]],  ...] -> [q[0], r[0], ...], [q[1], r[1], ...]
    >     ```

    **Parameters**

    *   **qargs** (`List`) – List of quantum bit arguments.
    *   **cargs** (`List`) – List of classical bit arguments.

    **Return type**

    `Tuple`\[`List`, `List`]

    **Returns**

    A tuple with single arguments.

    **Raises**

    **CircuitError** – If the input is not valid. For example, the number of arguments does not match the gate expectation.
  </Function>

  ### c\_if

  <Function id="qiskit.circuit.library.ZGate.c_if" name="c_if" signature="c_if(classical, val)">
    Add classical condition on register classical and value val.
  </Function>

  ### control

  <Function id="qiskit.circuit.library.ZGate.control" name="control" signature="control(num_ctrl_qubits=1, label=None, ctrl_state=None)">
    Return a (mutli-)controlled-Z gate.

    One control returns a CZ gate.

    **Parameters**

    *   **num\_ctrl\_qubits** (*int*) – number of control qubits.
    *   **label** (*str or None*) – An optional label for the gate \[Default: None]
    *   **ctrl\_state** (*int or str or None*) – control state expressed as integer, string (e.g. ‘110’), or None. If None, use all 1s.

    **Returns**

    controlled version of this gate.

    **Return type**

    [ControlledGate](qiskit.circuit.ControlledGate "qiskit.circuit.ControlledGate")
  </Function>

  ### copy

  <Function id="qiskit.circuit.library.ZGate.copy" name="copy" signature="copy(name=None)">
    Copy of the instruction.

    **Parameters**

    **name** (*str*) – name to be given to the copied circuit, if None then the name stays the same.

    **Returns**

    **a copy of the current instruction, with the name**

    updated if it was provided

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")
  </Function>

  ### decompositions

  <Function id="qiskit.circuit.library.ZGate.decompositions" name="decompositions" signature="property decompositions">
    Get the decompositions of the instruction from the SessionEquivalenceLibrary.
  </Function>

  ### definition

  <Function id="qiskit.circuit.library.ZGate.definition" name="definition" signature="property definition">
    Return definition in terms of other basic gates.
  </Function>

  ### duration

  <Function id="qiskit.circuit.library.ZGate.duration" name="duration" signature="property duration">
    Get the duration.
  </Function>

  ### inverse

  <Function id="qiskit.circuit.library.ZGate.inverse" name="inverse" signature="inverse()">
    Return inverted Z gate (itself).
  </Function>

  ### is\_parameterized

  <Function id="qiskit.circuit.library.ZGate.is_parameterized" name="is_parameterized" signature="is_parameterized()">
    Return True .IFF. instruction is parameterized else False
  </Function>

  ### label

  <Function id="qiskit.circuit.library.ZGate.label" name="label" signature="property label">
    Return gate label

    **Return type**

    `str`
  </Function>

  ### mirror

  <Function id="qiskit.circuit.library.ZGate.mirror" name="mirror" signature="mirror()">
    DEPRECATED: use instruction.reverse\_ops().

    **Returns**

    **a new instruction with sub-instructions**

    reversed.

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")
  </Function>

  ### params

  <Function id="qiskit.circuit.library.ZGate.params" name="params" signature="property params">
    return instruction params.
  </Function>

  ### power

  <Function id="qiskit.circuit.library.ZGate.power" name="power" signature="power(exponent)">
    Creates a unitary gate as gate^exponent.

    **Parameters**

    **exponent** (*float*) – Gate^exponent

    **Returns**

    To which to\_matrix is self.to\_matrix^exponent.

    **Return type**

    [qiskit.extensions.UnitaryGate](qiskit.extensions.UnitaryGate "qiskit.extensions.UnitaryGate")

    **Raises**

    **CircuitError** – If Gate is not unitary
  </Function>

  ### qasm

  <Function id="qiskit.circuit.library.ZGate.qasm" name="qasm" signature="qasm()">
    Return a default OpenQASM string for the instruction.

    Derived instructions may override this to print in a different format (e.g. measure q\[0] -> c\[0];).
  </Function>

  ### repeat

  <Function id="qiskit.circuit.library.ZGate.repeat" name="repeat" signature="repeat(n)">
    Creates an instruction with gate repeated n amount of times.

    **Parameters**

    **n** (*int*) – Number of times to repeat the instruction

    **Returns**

    Containing the definition.

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")

    **Raises**

    **CircuitError** – If n \< 1.
  </Function>

  ### reverse\_ops

  <Function id="qiskit.circuit.library.ZGate.reverse_ops" name="reverse_ops" signature="reverse_ops()">
    For a composite instruction, reverse the order of sub-instructions.

    This is done by recursively reversing all sub-instructions. It does not invert any gate.

    **Returns**

    **a new instruction with**

    sub-instructions reversed.

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")
  </Function>

  ### to\_matrix

  <Function id="qiskit.circuit.library.ZGate.to_matrix" name="to_matrix" signature="to_matrix()">
    Return a numpy.array for the Z gate.
  </Function>

  ### unit

  <Function id="qiskit.circuit.library.ZGate.unit" name="unit" signature="property unit">
    Get the time unit of duration.
  </Function>

  ### validate\_parameter

  <Function id="qiskit.circuit.library.ZGate.validate_parameter" name="validate_parameter" signature="validate_parameter(parameter)">
    Gate parameters should be int, float, or ParameterExpression
  </Function>
</Class>

